--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html id="J-html" class="">
 <head>
-　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-　　<title>{{ page.title }}</title>
+     <!--
+     **
+     * Author:         掌心
+     * Contact:        baoguo.ding@gmail.com
+     * Theme Name:     iLotus
+     **
+    -->
+    <meta charset="UTF-8" />
+    <title>
+        {% if page.title %}
+            {{ page.title }}
+        {% else %}
+            {{ site.title }}
+        {% endif %}
+    </title>
+    <meta name="generator" content="Jekyll" />
+    <meta name="author" content="{{ site.author.name }}" />
+    {% if page.description %}
+    <meta name="description" content="{{ page.description }}" />
+    {% elsif site.description %}
+    <meta name="description" content="{{ site.description }}" />
+    {% endif %}
+    {% if page.kekeywords %}
+    <meta name="keywords" content="{{ page.keywords | join: ',' }}" />
+    {% elsif site.keywords %}
+    <meta name="keywords" content="{{ site.keywords | join: ',' }}" />
+    {% endif %}
+    {% feed_meta %}
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" media="all" href="{{ site.url | append: site.baseurl }}/static/css/font-awesome.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="{{ site.url | append: site.baseurl }}/static/style.css" />
+    <link rel="stylesheet" type="text/css" media="all" href="{{ site.url | append: site.baseurl }}/static/jekyll-github.css" />
+    <!--[if lt IE 9]>
+    <script src="{{ site.url | append: site.baseurl }}/static/js/html5.js" type="text/javascript"></script>
+    <![endif]-->
 </head>
-<body>
-　　{{ content }}
+<body itemscope itemtype="http://schema.org/WebPage" class="home blog lotus index">
+    <nav class="lotus-nav">
+        <ul>
+            {% for nav in site.iLotus.navs %}
+            {% assign active = nil %}
+            {% assign homeClass = nil %}
+            {% if page.url == nav.url%}
+              {% assign active = 'current' %}
+            {% endif %}
+            {% if nav.class == 'home' %}
+                {% assign homeClass = 'home ' %}
+            {% endif %}
+            <li class="{{ homeClass }}{{ active }}">
+                {% if nav.url contains 'http://' or nav.url contains 'https://' %}
+                <a href="{{ nav.url }}" rel="bookmark" target="_blank" title="{{ nav.text }}">
+                    <i class="{{ nav.icon }}"></i>
+                </a>
+                {% else %}
+                <a href="{{ site.url | append: site.baseurl }}{{ nav.url }}" rel="bookmark" title="{{ nav.text }}">
+                    <i class="{{ nav.icon }}"></i>
+                </a>
+                {% endif %}
+            </li>
+            {% endfor %}
+        </ul>
+    </nav>
+
+    {{ content }}
+
+<footer class="lotus-footer">
+	<p>Copyright © {{ site.iLotus.begin }}–{{ site.time | date: "%Y" }} {{ site.title }} All rights reserved. Design by <a href="http://www.zhanxin.info" target="_blank">zhanxin</a>.</p>
+</footer>
+<script src="{{ site.url | append: site.baseurl }}/static/js/jquery.js" type="text/javascript"></script>
+<script src="{{ site.url | append: site.baseurl }}/static/js/jquery.scrollTo.js" type="text/javascript"></script>
+<script src="{{ site.url | append: site.baseurl }}/static/js/jquery.cookie.js" type="text/javascript"></script>
+<script src="{{ site.url | append: site.baseurl }}/static/js/iLotus.js" type="text/javascript"></script>
 </body>
 </html>
