--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,16 @@
     {% endif %}
     {% feed_meta %}
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<script>
+		var _hmt = _hmt || [];
+		(function() {
+		  var hm = document.createElement("script");
+		  hm.src = "//hm.baidu.com/hm.js?dc0e872d893fec65bd100b9971a20aba";
+		  var s = document.getElementsByTagName("script")[0]; 
+		  s.parentNode.insertBefore(hm, s);
+		})();
+	</script>
+		
     <link rel="stylesheet" type="text/css" media="all" href="{{ site.url | append: site.baseurl }}/static/css/font-awesome.css" />
     <link rel="stylesheet" type="text/css" media="all" href="{{ site.url | append: site.baseurl }}/static/style.css" />
     <link rel="stylesheet" type="text/css" media="all" href="{{ site.url | append: site.baseurl }}/static/jekyll-github.css" />
