--- a/static/style.css
+++ b/static/style.css
@@ -507,6 +507,14 @@ h6 {
   border-bottom: 1px dotted #c8c8c8;
 }
 
+.lotus-article img {
+  max-width: 100%;
+}
+
+.lotus-article img:hover {
+  cursor: pointer;
+}
+
 .lotus-double {
   margin-bottom: 3em;
 }
